--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,10 +5,11 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
+		<link rel='icon' type='image/x-icon' href='/favicon.ico' />
+		<link rel="icon" type="image/png" href="/favicon.png">
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="viewport" content="width=device-width" />
-		<meta name="generator" content={Astro.generator} />
-		<title>Astro</title>
+		<title>Lili's LLM Chat</title>
 	</head>
 	<body>
 		<h1>Astro</h1>
