--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,3 +1,13 @@
 .home {
     text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    height: calc(100vh - 10vmin);
+    width: calc(100vw - 10vmin);
+    padding: 5vmin;
+    .chat {
+        flex-grow: 1;
+        width: 100%;
+    }
 }
