--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -13,4 +13,14 @@ body {
 //   background-attachment: fixed;
 //   background-position: 50% 50%;
   font-size: max(calc(0.5vmin + 0.75vmax), 20px);
+  &::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: radial-gradient(ellipse at center, transparent 0%, rgba(0,0,0,0.2) 90%); /* Adjust color and opacity */
+    pointer-events: none; /* Allows interaction with content below the overlay */
+  }
 }
