update conversation tray and app font

--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -1,9 +1,26 @@
+@font-face {
+  font-family: 'Comic Mono';
+  src: url('/fonts/comic-mono-latin-400-normal.woff2') format('woff2');
+  font-weight: 400;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Comic Mono';
+  src: url('/fonts/comic-mono-latin-700-normal.woff2') format('woff2');
+  font-weight: 700;
+  font-style: normal;
+  font-display: swap;
+}
+
 * {
   margin: 0;
   padding: 0;
 }
 
 body {
+  font-family: 'Comic Mono', monospace;
   color: #eaeaea;
   fill: #eaeaea;
   background-color: #3e334f;
