--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,6 +2,7 @@
 import Chat from '../components/Chat.jsx'
 import "../styles/base.scss"
 import "../styles/index.scss"
+import Logo from '../icons/logo.svg'
 ---
 
 <html lang="en">
@@ -14,7 +15,7 @@ import "../styles/index.scss"
 		<title>Lili's LLM Chat</title>
 	</head>
 	<body class="home">
-        <h1>Lili's LLM Chat</h1>
+        <h1 class="logo"><Logo/></h1>
 		<Chat client:load/>
 	</body>
 </html>
