--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -19,6 +19,11 @@
   padding: 0;
 }
 
+
+button {
+  cursor: pointer;
+}
+
 body {
   font-family: 'Comic Mono', monospace;
   color: #eaeaea;
@@ -39,5 +44,15 @@ body {
     height: 100%;
     background: radial-gradient(ellipse at center, transparent 0%, rgba(0,0,0,0.2) 90%); /* Adjust color and opacity */
     pointer-events: none; /* Allows interaction with content below the overlay */
+  }
+}
+
+
+.logo {
+  filter: drop-shadow(1vmin .5vmin .5vmin #8b83ffa8);
+  width: 60vw;
+  max-height: 15vh;
+  svg {
+    max-height: 100%;
   }
 }
