--- a/src/styles/settings.scss
+++ b/src/styles/settings.scss
@@ -1,6 +1,9 @@
 .settings-panel {
     
     .api-picker {
+        border: 0.2em dashed #ffffff3b;
+        padding: 1em;
+        margin-bottom: 0.5em;
         h1 {
             margin-bottom: 0.5em;
         }
