--- a/src/styles/ToggleSwitch.scss
+++ b/src/styles/ToggleSwitch.scss
@@ -4,6 +4,7 @@
     background-color: #4b4b4b;
     position: relative;
     border-style: solid;
+    display: inline-block;
     border-color: black;
     cursor: pointer;
     user-select: none;
