--- a/src/styles/modelPicker.scss
+++ b/src/styles/modelPicker.scss
@@ -2,7 +2,8 @@
   ul {
     list-style: none;
     li {
-        margin-bottom: 0.25em;
+        padding-top: 0.25em;
+        padding-bottom: 0.25em;
         cursor: pointer;
         &:nth-child(even) {
             background-color: #ffffff21;
