--- a/src/styles/modelPicker.scss
+++ b/src/styles/modelPicker.scss
@@ -5,6 +5,9 @@
         padding-top: 0.25em;
         padding-bottom: 0.25em;
         cursor: pointer;
+        &.active {
+          background-color: #ff395c33 !important;
+        }
         &:nth-child(even) {
             background-color: #ffffff21;
         }
