--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -22,6 +22,10 @@
 
 button {
   cursor: pointer;
+  color: inherit;
+  background: #3d344b;
+  padding: 0.25em 0.5em;
+  border-radius: 0.5em;
 }
 
 body {
