--- a/src/styles/settings.scss
+++ b/src/styles/settings.scss
@@ -1,76 +1,86 @@
 .settings-panel {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    & > *:not(:first-child) {
-        margin-top: 0.5em;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  & > *:not(:first-child) {
+    margin-top: 0.5em;
+  }
+  .api-picker {
+    border: 0.2em dashed #ffffff3b;
+    padding: 1em;
+    margin-bottom: 0.5em;
+    h2 {
+      margin-bottom: 1em;
     }
-    .api-picker {
-        border: 0.2em dashed #ffffff3b;
-        padding: 1em;
+    &.add-api {
+      form {
+        .error {
+          color: white;
+          font-weight: bold;
+          margin-bottom: 0.5em;
+          border: 0.25em solid red;
+          padding: 0.25em 1em;
+          background: black;
+        }
+        input {
+            margin-bottom: 1em;
+        }
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        button[type="submit"] {
+          margin-top: 0.5em;
+        }
+      }
+    }
+    .api-list {
+      .api {
+        text-shadow: 0.1em 0.1em 0.2em #00000070;
+        background-color: #ffffff21;
         margin-bottom: 0.5em;
-        h1 {
-            margin-bottom: 0.5em;
+        display: flex;
+        padding: 1em;
+        border-top: 1em solid #e7e7e7;
+        flex-direction: column;
+        &.active {
+          outline: 2px solid pink;
         }
-        &.add-api {
-            form {
-                .error {
-                        color: white;
-                        font-weight: bold;
-                        margin-bottom: 0.5em;
-                        border: 0.25em solid red;
-                        padding: 0.25em 1em;
-                        background: black;
-                }
-                display: flex;
-                flex-direction: column;
-                align-items: center;
-                button[type="submit"] {
-                    margin-top: 0.5em;
-                }
-            }
+        .title {
+          margin-bottom: 0.5em;
+          text-decoration: underline;
+          font-weight: bold;
         }
-        .api-list {
-            .api {
-                text-shadow: 0.1em 0.1em 0.2em #00000070;
-                background-color: #ffffff21;
-                margin-bottom: 0.5em;
-                display: flex;
-                padding: 0.5em;
-                flex-direction: column;
-                &.active {
-                    outline: 2px solid pink;
-                }
-                .title {
-                    text-decoration: underline;
-                    font-weight: bold;
-                }
-                .controls {
-                    display: flex;
-                    justify-content: space-around;
-                    .delete-api {
-                    border: none;
-                    background: none;
-                    width: fit-content;
-                    // margin-left: auto;
-                    // margin-right: auto;
-                    // margin-top: 0.5em;
-                    cursor: pointer;
-                    svg {
-                        width: 1.5em;
-                    }
-                }
-                }
-            }
-        }
-        .add {
-            margin-top: 0.5em;
+        .controls {
+          margin-top: 1em;
+          margin-bottom: 0.5em;
+          display: flex;
+          justify-content: space-around;
+          .toggle-switch {
+            margin: auto 0;
+          }
+          .delete-api {
+            border: none;
+            background: none;
+            width: fit-content;
+            // margin-left: auto;
+            // margin-right: auto;
+            // margin-top: 0.5em;
             cursor: pointer;
             svg {
-                //fill: #eaeaea;
-                max-width: 8vmin;
-                max-height: 8vmin;
+              width: 3em;
             }
+          }
         }
+      }
     }
+    .add {
+      margin-top: 1.5em;
+      cursor: pointer;
+      svg {
+        //fill: #eaeaea;
+        max-width: 8vmin;
+        max-height: 8vmin;
+      }
+    }
+  }
 }
