--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -1,6 +1,6 @@
 @font-face {
   font-family: 'Comic Mono';
-  src: url('/fonts/comic-mono-latin-400-normal.woff2') format('woff2');
+  src: url('../fonts/comic-mono-latin-400-normal.woff2') format('woff2');
   font-weight: 400;
   font-style: normal;
   font-display: swap;
@@ -8,7 +8,7 @@
 
 @font-face {
   font-family: 'Comic Mono';
-  src: url('/fonts/comic-mono-latin-700-normal.woff2') format('woff2');
+  src: url('../fonts/comic-mono-latin-700-normal.woff2') format('woff2');
   font-weight: 700;
   font-style: normal;
   font-display: swap;
@@ -19,8 +19,17 @@
   padding: 0;
 }
 
+textarea {
+  font-family: inherit;
+}
+
+input {
+  outline-color: pink;
+  font-family: inherit;
+}
 
 button {
+  font-family: inherit;
   cursor: pointer;
   color: inherit;
   background: #3d344b;
