fix a formatting issue with the code markdown

--- a/src/styles/chat.scss
+++ b/src/styles/chat.scss
@@ -91,6 +91,9 @@
       }
       .content {
         white-space: pre-wrap;
+        code {
+          white-space: pre-wrap;
+        }
       }
       &.user {
         align-items: flex-start;
