add new features and partially implement file uploads

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -15,7 +15,7 @@ import Logo from '../icons/logo.svg'
 		<title>Lili's LLM Chat</title>
 	</head>
 	<body class="home">
-        <h1 class="logo"><Logo/></h1>
+        <h1 id="logo-text" class="logo"><Logo/></h1>
 		<Chat client:load/>
 	</body>
 </html>
